<resources>
  <string name="app_name_debug" translatable="false">Fawry</string>
  <string name="app_name" translatable="false">Fawry</string>

  <!-- General Strings -->
  <string name="empty_warning">This field is required</string>
  <string name="connection_error">Connection Error</string>
  <string name="no_internet">No internet connection please try again later</string>
  <string name="retry">Retry</string>
  <string name="cancel">Cancel</string>
  <string name="some_error">Some error occurred, try again later</string>
  <string name="release">Release Date:</string>
  <string name="phone">رقم الجوال</string>
  <string name="reset">إعادة تعيين</string>
  <string name="share">مشاركة</string>
  <string name="please_enter">من فضلك قم بادخال</string>
  <string name="password">كلمة المرور</string>
    <string name="enter">دخول</string>
  <string name="forget_password">هل نسيت كلمة المرور؟</string>
  <string name="register_now">تسجيل الآن</string>
  <string name="login">اقلط</string>
  <string name="new_account">حساب جديد</string>
  <string name="first_name">الاسم الأول</string>
  <string name="last_name">الاسم الأخير</string>
  <string name="confirm_password">تأكيد كلمـة الـمـرور</string>
  <string name="agree_on">أوافق على </string>
  <string name="register">تسجيل</string>
  <string name="privacy_policy">الشروط والأحكام</string>
  <string name="enter_code">ادخل الرمز</string>
  <string name="new_password">كلمة المرور الجديد</string>
  <string name="change_password">تغيير كلمة المرور؟</string>
  <string name="current_password">كلمة المرور الحالية</string>
  <string name="enter_your_phone_will_send_code_to_it">ادخل الهاتف الخاص بك ليتم ارسال رمز لاعادة التعيين</string>
  <string name="confirm_code_not_correct">الرمز التاكيدى ليس صحيحا</string>
  <string name="did_you_forget_password">هل نسيت كلمة المرور؟</string>
  <string name="enter_your_phone">ادخل رقم الهاتف</string>
  <string name="next">التالى</string>
  <string name="resend_code">ارسال رمز اخر</string>
  <string name="follow">متابعة</string>
  <string name="reset_password">اعادة تعيين كلمة المرور</string>
  <string name="please_accept_privacy_policy">من فضلك قم بالموافقة على الشروط والاحكام</string>
  <string name="both_password_must_be_both">كلا من كلمتى المرور لابد ان يكونوا متطابقين</string>
    <string name="home">الرئيسية</string>
  <string name="results">النتائج</string>
  <string name="news">الأخبار</string>
  <string name="more">المزيد</string>
  <string name="auction_camales">مزاد الإبل</string>
  <string name="gifts">هدايا</string>
  <string name="judgement">لجنة التحكيم</string>
  <string name="map_events">الخريطة التفاعلية</string>
  <string name="events">الفعاليات</string>
  <string name="profile">الملف الشخصى</string>
  <string name="help">المساعدة</string>
  <string name="contact_us">تواصل معنا</string>
  <string name="common_questions">الأسئلة الشائعة</string>
  <string name="look_carefully">راعى النظر</string>
    <string name="please_relogin">من فضلك قم باعادة تسجيل الدخول</string>
  <string name="please_try_again">الرجاء المحاولة مرة اخرى</string>
    <string name="more_results">المزيد من النتائج</string>
  <string name="to_read_new">لقراءة الخبر</string>
  <string name="welcome_header">يا مرحبا يا ريحة الورد والهيل .. لا هبت النسمة وتطاير عطرها</string>
  <string name="welcome">ارحب يا</string>
  <string name="visitor">زائر</string>
  <string name="steps_of_participate">خطوات المشاركة</string>
  <string name="steps_register">سجل</string>
  <string name="steps_charge">اشحن</string>
  <string name="steps_vote">صوّت</string>
  <string name="to_watch_video">لمشاهدة فيديو شرح المسابقة</string>
  <string name="notifications">الأشعارات</string>
  <string name="round">الجولة</string>
  <string name="vote">تصويت</string>
  <string name="current_competitions">المنافسات المتاحة</string>
  <string name="point_balance">رصيد النقاط</string>
  <string name="wallet_automatic"><![CDATA[المحفظة > الآلية]]></string>
  <string name="wallet_charge_wallet"><![CDATA[المحفظة > اشحن محفظتك]]></string>
  <string name="enter_another_balance">أدخل مبلغ اخر</string>
  <string name="cost">التكلفة</string>
  <string name="pay">دفع</string>
  <string name="more_competitions">المزيد من المنافسات</string>
  <string name="wallet">المحفظة</string>
    <string name="owner">المالك</string>
    <string name="color">اللون</string>
  <string name="age">السن</string>
  <string name="origin">الاصل و السلالة</string>
    <string name="enter_another_number">عدد آخر</string>
  <string name="write_number">كتابة العدد</string>
  <string name="choose_the_number_points_for_voting">اختر عدد نقاط التصويت</string>
  <string name="your_balance_from_points">رصيدك من النقاط</string>
  <string name="point">نقطة</string>
  <string name="round_winner">الفائز بالجولة</string>

</resources>