<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  app:startDestination="@id/homeFragment">

  <fragment
    android:id="@+id/homeFragment"
    android:name="app.fawry.task.presentation.home.ui.HomeFragment"
    android:label="@string/home" />
  
  <fragment
    android:id="@+id/settingsFragment"
    android:name="app.fawry.task.presentation.settings.SettingsFragment"
    android:label="@string/look_carefully" >
    <deepLink
      android:id="@+id/registerFragment"
      android:autoVerify="true"
      app:uri="registerFragment://app.kamelx.register" />


    <deepLink
      android:id="@+id/more"
      android:autoVerify="true"
      app:uri="more://app.kamelx.more" />

  </fragment>

  <fragment
    android:id="@+id/newsFragment"
    android:name="app.fawry.task.presentation.news.NewsFragment"
    android:label="@string/news" >


    <deepLink
      android:id="@+id/news"
      android:autoVerify="true"
      app:uri="news://app.kamelx.news" />


  </fragment>
  <fragment
    android:id="@+id/notificationFragment"
    android:name="app.fawry.task.presentation.notification.NotificationFragment"
    android:label="@string/notifications" >

    <deepLink
      android:id="@+id/notifications"
      android:autoVerify="true"
      app:uri="notifications://app.kamelx.notifications" />

  </fragment>
  <fragment
    android:id="@+id/allMatchesFragment"
    android:name="app.fawry.task.presentation.match.all.ResultMatchesFragment"
    android:label="@string/more_competitions">

    <deepLink
      android:id="@+id/competitions"
      android:autoVerify="true"
      app:uri="competitions://app.kamelx.competitions" />

  </fragment>
  <fragment
    android:id="@+id/walletFragment"
    android:name="app.fawry.task.presentation.balance.WalletFragment"
    android:label="WalletFragment" />
  <fragment
    android:id="@+id/matchDetailsFragment"
    android:name="app.fawry.task.presentation.match.details.MatchDetailsFragment"
    android:label="@string/current_competitions" >


    <deepLink
      android:id="@+id/competitions"
      android:autoVerify="true"
      app:uri="competitions://app.kamelx.competitions/{id}" />
    <argument
      android:name="id"
      app:argType="integer" />
    <action
      android:id="@+id/action_matchDetailsFragment_to_voteFragment"
      app:enterAnim="@anim/anim_slide_in_right"
      app:exitAnim="@anim/anim_slide_out_left"
      app:popEnterAnim="@anim/anim_slide_in_left"
      app:popExitAnim="@anim/anim_slide_out_right"
      app:destination="@id/voteFragment" />


  </fragment>
  <fragment
    android:id="@+id/voteFragment"
    android:name="app.fawry.task.presentation.vote.VoteFragment"
    android:label="@string/vote" >

    <argument
      android:name="position"
      app:argType="integer" />

    <argument
      android:name="matchModel"
      app:argType="app.fawry.task.domain.home.model.match.MatchModel" />

  </fragment>


</navigation>