<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <import type="android.view.View" />
    <variable
      name="viewmodel"
      type="app.fawry.task.presentation.auth.updatePassword.ChangePasswordViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dimen8"
    android:paddingStart="@dimen/dimen14"
    android:paddingEnd="@dimen/dimen14"
    android:paddingBottom="@dimen/dimen14">


    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_did_you_forget_password"
      style="@style/txtStyleMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen14"
      tools:text="@string/change_password"
      android:text="@{viewmodel.userLogin ? @string/change_password : @string/reset_password}"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <!--    enter_your_password_to_renew_password-->
    <!--    userLogin-->

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/input_password_old"
      style="@style/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen14"
      android:hint="@string/current_password"
      android:inputType="textPassword"
      android:visibility="@{ viewmodel.userLogin ? View.VISIBLE : View.GONE , default = gone }"
      android:text="@={viewmodel.request.oldPassword}"
      android:textAlignment="viewStart"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@android:color/black"
      android:textColorHint="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_did_you_forget_password" />


    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/input_password"
      style="@style/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen14"
      android:hint="@string/new_password"
      android:inputType="textPassword"
      android:text="@={viewmodel.request.password}"
      android:textAlignment="viewStart"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@android:color/black"
      android:textColorHint="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_password_old" />

    <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/input_password2"
      style="@style/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen14"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      android:text="@={viewmodel.request.password_confirmation}"
      android:textAlignment="viewStart"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="@android:color/black"
      android:textColorHint="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_password" />


    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_submit"
      style="@style/btnSubmit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen14"
      android:onClick="@{ (v) -> viewmodel.submit(v) }"
      android:text="@string/confirm_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_password2" />


    <ProgressBar
      android:id="@+id/progress"
      style="Widget.MaterialComponents.LinearProgressIndicator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_did_you_forget_password"
      app:trackColor="@color/colorPrimary"
      app:trackThickness="@dimen/dimen4" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

